fix(codesearch): remove Java 21 method usage